--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,10 @@
     <artifactId>test</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>test Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <properties>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
